return all details of twins
