# backend/docs/swagger.yaml
@@ -14,6 +14,12 @@ definitions:
     properties:
       account_id:
         type: string
+      public_key:
+        type: string
+      relay:
+        type: string
+      twin_id:
+        type: integer
     type: object
   app.ChangePasswordInput:
     properties:
